# tvterm

./: Cargo.toml
crates/tvterm/: Cargo.toml
crates/tvterm-cli/: Cargo.toml
crates/tvterm/src/: app.rs  config.rs  lib.rs  main.rs  overlay.rs  pty.rs  renderer.rs  terminal.rs  text.rs  theme.rs
